# SMT-DFT

./: Cargo.toml  README.md  test_mic.py
dft/logs/: lastrun.log.2024-03-12
src/: main.rs
