[package]
name = "smt_dft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
sled = "0.34.7"
tokio = { version = "1.36.0", features = ['full'] }
chrono = "0.4.35"
clia-tracing-config = "0.2.7"
tracing = "0.1.40"
rayon = "1.9.0"
rustfft = "6.2.0"
cpal = "0.13.1"
rodio = "0.17.3"
plotters = "0.3.5"
